--- a/templates/login.html
+++ b/templates/login.html
@@ -173,7 +173,7 @@
                         </form>
                         <div class="text-center mt-3">
                             <p>Or login with:</p>
-                            <a href="javascript:void(0)" onclick="alert('Microsoft har för höga krav på mig...')" class="btn btn-light w-100">
+                            <a href="/microsoft_login" class="btn btn-light w-100">
                                 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/44/Microsoft_logo.svg/96px-Microsoft_logo.svg.png" 
                                      alt="Microsoft" style="height: 20px; margin-right: 10px;">
                                 Sign in with Microsoft
