--- a/templates/terminal.html
+++ b/templates/terminal.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>T11-Storage - Terminal</title>
+    <link rel="icon" type="image/x-icon" href="https://www.gtg.se/content/images/Ikoner/GTG_ikon_dator_spets_med-cirkel.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         :root {
