--- a/templates/login.html
+++ b/templates/login.html
@@ -22,8 +22,7 @@
                 #6f42c1,
                 #e44d26,
                 #4a148c,
-                #00acc1,
-                #ffeb3b
+                #00acc1
             );
             background-size: 1000% 1000%;
             animation: gradient 30s ease infinite;
