--- a/templates/index.html
+++ b/templates/index.html
@@ -18,14 +18,20 @@
         }
 
         .grid-container {
-            display: grid;
-            grid-template-columns: repeat(18, 1fr);
-            gap: 4px;
+            display: flex;
+            gap: 20px;
             padding: 20px;
             margin-top: 20px;
             background: white;
             border-radius: 10px;
             box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+        }
+
+        .grid-column {
+            display: grid;
+            grid-template-columns: repeat(5, 1fr);
+            gap: 4px;
+            flex: 1;
         }
 
         .grid-item {
@@ -609,22 +615,57 @@
             <div class="col-12">
                 <h2 class="section-title">Storage Grid</h2>
                 <div class="grid-container">
-                    {% for i in range(1, 21) %}
-                        {% for j in range(1, 20) %}
-                            {% set index = (i-1) * 19 + j %}
-                            {% if index <= 360 %}
-                                <div class="grid-item {% if index|string in active_searches %}active{% endif %}" 
-                                     data-id="{{ index }}"
-                                     onclick="toggleItem(this)">
-                                    <span class="item-content" data-id="{{ index }}" 
-                                          data-name="{% if components[index|string] and components[index|string].name and components[index|string].name != '-' and components[index|string].name != '\u00ad' and components[index|string].name != ' ' and components[index|string].name != '' %}{{ components[index|string].name[:10] }}{% endif %}">
-
-                                        {{ index }}
-                                    </span>
-                                </div>
-                            {% endif %}
+                    <div class="grid-column">
+                        {% for i in range(1, 25) %}
+                            {% for j in range(1, 6) %}
+                                {% set index = (i-1) * 5 + j %}
+                                {% if index <= 120 %}
+                                    <div class="grid-item {% if index|string in active_searches %}active{% endif %}" 
+                                         data-id="{{ index }}"
+                                         onclick="toggleItem(this)">
+                                        <span class="item-content" data-id="{{ index }}" 
+                                              data-name="{% if components[index|string] and components[index|string].name and components[index|string].name != '-' and components[index|string].name != '\u00ad' and components[index|string].name != ' ' and components[index|string].name != '' %}{{ components[index|string].name[:10] }}{% endif %}">
+                                            {{ index }}
+                                        </span>
+                                    </div>
+                                {% endif %}
+                            {% endfor %}
                         {% endfor %}
-                    {% endfor %}
+                    </div>
+                    <div class="grid-column">
+                        {% for i in range(1, 25) %}
+                            {% for j in range(1, 6) %}
+                                {% set index = 120 + (i-1) * 5 + j %}
+                                {% if index <= 240 %}
+                                    <div class="grid-item {% if index|string in active_searches %}active{% endif %}" 
+                                         data-id="{{ index }}"
+                                         onclick="toggleItem(this)">
+                                        <span class="item-content" data-id="{{ index }}" 
+                                              data-name="{% if components[index|string] and components[index|string].name and components[index|string].name != '-' and components[index|string].name != '\u00ad' and components[index|string].name != ' ' and components[index|string].name != '' %}{{ components[index|string].name[:10] }}{% endif %}">
+                                            {{ index }}
+                                        </span>
+                                    </div>
+                                {% endif %}
+                            {% endfor %}
+                        {% endfor %}
+                    </div>
+                    <div class="grid-column">
+                        {% for i in range(1, 25) %}
+                            {% for j in range(1, 6) %}
+                                {% set index = 240 + (i-1) * 5 + j %}
+                                {% if index <= 360 %}
+                                    <div class="grid-item {% if index|string in active_searches %}active{% endif %}" 
+                                         data-id="{{ index }}"
+                                         onclick="toggleItem(this)">
+                                        <span class="item-content" data-id="{{ index }}" 
+                                              data-name="{% if components[index|string] and components[index|string].name and components[index|string].name != '-' and components[index|string].name != '\u00ad' and components[index|string].name != ' ' and components[index|string].name != '' %}{{ components[index|string].name[:10] }}{% endif %}">
+                                            {{ index }}
+                                        </span>
+                                    </div>
+                                {% endif %}
+                            {% endfor %}
+                        {% endfor %}
+                    </div>
                 </div>
             </div>
         </div>
